# AkariGL

./: .directory  .gitmodules  CMakeLists.txt  README.md
res/shaders/: debug.frag  debug.vert  flat.frag  flat.vert  lit.frag  post.vert  post_direct.frag  post_lines_laplacian.frag  shadow.frag  shadow.glsl  shadow.vert
src/: agl.h  agl_platform.h  agl_renderer.h  agl_windowing.h  testing.c
src/platform/: filesys.c
src/renderer/: debug.h  render.c  shader.c
src/windowing/: windowing.c
